--- a/main.html
+++ b/main.html
@@ -3,12 +3,27 @@
 <html>
 
 <head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h2>Intership Form</h2>
+	<Div class="class">
+		<span>First Name</span>
+		<span>Last Name</span>
+		<span>Email Address</span>
+	</Div>
+	<label class="box">
+		<input type="text">
+		<input type="text">
+		<input type="text">
+	</label>
+	<span></span>
     <script type="text/javascript" src="./script.js">
+		
 </script>
 
 </body>
